--- a/commoncloud-config-dept-client.yml
+++ b/commoncloud-config-dept-client.yml
@@ -36,7 +36,7 @@ logging:
 eureka:
   client: 
     service-url:
-      defaultZone: http://localhost:7001/eureka 单机环境
+      defaultZone: http://localhost:7001/eureka
   instance:
     instance-id: commoncloud-dept8001
     prefer-ip-address: true
