--- a/commoncloud-config-client.yml
+++ b/commoncloud-config-client.yml
@@ -13,6 +13,8 @@ eureka:
   client:
     service-url:
       defaultZone: http://eureka-dev.com:7001/eureka/
+config:
+  info: xx
 ---
 server:
   port: 8202
